# OptimusKG

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  README_.md  docker-compose.yaml  duplicated_nodes.csv  info.log.1  info.log.10  info.log.2  info.log.3  info.log.4  info.log.5  info.log.6  info.log.7  info.log.8  info.log.9  pyproject.toml
.agents/skills/node-catalog-sync/: SKILL.md
.astro/: config.yaml
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.workflow.yml  ci.yml  deploy-kedro-viz.yml  release.yml
cli/: __main__.py  paths.py  utils.py
cli/commands/: __init__.py  benchmark_plots.py  get_stats.py  metrics.py  neo4j_import.py  neo4j_to_pg.py  primekg_metrics.py  schema.py  types.py  unify_benchmark_files.py  write_metrics.py  write_metrics_report.py
cli/commands/evals/: README.md  __init__.py  centrality.py  pagerank.py  paperqa copy.py  paperqa.py  paperqa_figures.py  sample_edges.py  template.py  utils.py
cli/commands/figures/: __init__.py  adjacency_heatmap.py  ccdf_degree_distribution.py  closeness_centrality.py  degree_distribution.py  metaedge_bubble_plot.py  metapath_counts.py  property_type_distribution.py  registry.py  style.py
cli/commands/metrics/: __init__.py  edges.py  nodes.py  utils.py
cli/neo4j/: docker-compose.yaml  neo4j_entrypoint.sh
conf/: logging.yml
conf/base/: biocypher.yaml  evals.yml  parameters.yml
conf/base/biocypher/: biocypher.yaml  biocypher_config.yaml  schema_config.yaml
conf/base/catalog/: bronze.yml  gold.yml  landing.yml  silver.yml
conf/base/catalog/gold/: csv.yml  figures.yml  kg.yml  metrics.yml  optimuskg_edges.yml  optimuskg_nodes.yml  parquet.yml
conf/base/catalog/silver/: anatomy_anatomy.yml  anatomy_protein.yml  biological_process_biological_process.yml  biological_process_protein.yml  cellular_component_cellular_component.yml  cellular_component_protein.yml  disease_disease.yml  disease_phenotype.yml  disease_protein.yml  drug_disease.yml  drug_drug.yml  drug_phenotype.yml  drug_protein.yml  effect_protein.yml  exposure_biological_process.yml  exposure_cellular_component.yml  exposure_disease.yml  exposure_exposure.yml  exposure_molecular_function.yml  exposure_protein.yml  molecular_function_molecular_function.yml  molecular_function_protein.yml  pathway_pathway.yml  pathway_protein.yml  phenotype_phenotype.yml  phenotype_protein.yml  protein_biological_process.yml  protein_cellular_component.yml  protein_molecular_function.yml
conf/test/catalog/: bronze.yml  landing.yml  silver.yml
data/landing/opentargets/: download_source_files.sh
docs/: biome.jsonc  next.config.mjs  package.json  pnpm-lock.yaml  vercel.json
docs/content/docs/: data-sources.mdx  getting-started.mdx  index.mdx  license.mdx  meta.json  optimuskg-client.mdx  python-client.mdx
docs/content/docs/architecture/: catalog.mdx  configuration.mdx  datasets.mdx  hooks.mdx  index.mdx  medallion-layers.mdx  meta.json  pipelines.mdx  providers.mdx  runners.mdx
docs/content/docs/contributing/: ci.mdx  index.mdx  meta.json
docs/content/docs/data-sources/: bgee.mdx  ctd.mdx  disgenet.mdx  drugbank.mdx  drugcentral.mdx  gene-names.mdx  index.mdx  meta.json  onsides.mdx  ontology.mdx  opentargets.mdx  ppi.mdx  reactome.mdx
docs/content/docs/deployment/: meta.json  neo4j.mdx  releases.mdx
docs/content/docs/getting-started/: cli.mdx  evals.mdx  installation.mdx  meta.json  quickstart.mdx
docs/content/docs/graph-schema/: edge-types.mdx  edges.mdx  export-formats.mdx  index.mdx  meta.json  node-types.mdx  nodes.mdx
docs/public/: ack_org_logos_svg_candidates.csv
docs/source/: conf.py  index.rst
docs/src/app/: global.css  layout.tsx
docs/src/app/(home)/: landing.css  layout.tsx  page.tsx
docs/src/app/docs/: docs.css  layout.tsx
docs/src/components/: Logo.tsx  base-edge-schemas.tsx  base-schemas.tsx  disease-assoc-edge-schemas.tsx  disease-schema.tsx  drug-edge-schemas.tsx  drug-schema.tsx  edge-schema-shared.tsx  exposure-schema.tsx  gene-schema.tsx  go-annotation-edge-schemas.tsx  mdx.tsx  ontology-node-schemas.tsx  pathway-schema.tsx  phenotype-schema.tsx  remaining-edge-schemas.tsx  schema-tree.tsx
docs/src/components/landing/: CtaSection.tsx  DownloadButton.tsx  FeaturesSection.tsx  Footer.tsx  FrontierSection.tsx  HeroSection.tsx  LogoGarden.tsx  Navbar.tsx  RecentHighlights.tsx  TestimonialsSection.tsx
docs/src/lib/: layout.shared.tsx  shared.ts
evals/: README.md  __init__.py  edge_eval.py  pagerank.py
notebooks/: bgee.ipynb  ctd.ipynb  drugbank.ipynb  graph_inspection.ipynb  hybridize_ontologies.ipynb  ontology.ipynb  opentargets.ipynb  pagerank.ipynb  quickstart.ipynb  sample_edges_debug.ipynb
optimuskg/: __main__.py  settings.py  utils.py
optimuskg/datasets/: __init__.py  gene2goreader_dataset.py  lxml_dataset.py  owl_dataset.py  zip_dataset.py
optimuskg/datasets/polars/: __init__.py  json_dataset.py  parquet_dataset.py
optimuskg/datasets/sqldump_query_dataset/: docker-compose.yaml  sqldump_query_dataset.py
optimuskg/hooks/: __init__.py  checksum_hooks.py  privacy_hooks.py  quality_checks_hooks.py  silver_hooks.py
optimuskg/hooks/origin/: __init__.py  origin_hooks.py
optimuskg/hooks/origin/providers/: __init__.py  base.py  bioontology.py  drugbank.py  http.py  opentargets.py
optimuskg/pipelines/bronze/: pipeline.py
optimuskg/pipelines/bronze/nodes/: ctd.py  (+9 more)
optimuskg/pipelines/gold/: pipeline.py
optimuskg/pipelines/silver/: pipeline.py
optimuskg/runners/: __init__.py  dry_runner.py  parallel_runner.py
scripts/: benchmarks.sh  clean_files.sh  download_landing.sh  download_landing_files.sh  download_landing_ontologies.sh  neo4j_entrypoint.sh
src/optimuskg/: __init__.py  __main__.py  settings.py
src/optimuskg/datasets/: __init__.py  gene2goreader_dataset.py  owl_dataset.py
src/optimuskg/hooks/: __init__.py  convert_columns_to_snake_case.py
src/optimuskg/utils/: strings.py
tests/: conftest.py  test_run.py
tests/pipelines/bronze/: test_bronze_pipeline.py
tests/pipelines/gold/: test_export_kg.py
(+561 files in other folders)
