[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
requires-python = ">=3.12"
name = "optimus"
readme = "README.md"
version = "0.69.5"
dependencies = [
  "ipython>=8.10",
  "jupyterlab>=3.0",
  "notebook",
  "kedro[jupyter]~=1.0.0",
  "kedro-datasets[pandas-csvdataset, pandas-jsondataset, polars-csvdataset]>=3.0",
  "polars>=1.19.0",
  "biocypher>=0.6.1",
  "requests>=2.32.3",
  "aiohttp>=3.11.11",
  "lxml>=5.3.0",
  "pandas-stubs>=2.2.3.241126",
  "types-openpyxl>=3.1.5.20241225",
  "lxml-stubs>=0.5.1",
  "psycopg2-binary>=2.9.10",
  "pyarrow>=19.0.0",
  "sqlalchemy>=2.0.37",
  "types-requests>=2.32.0.20250328",
  "kedro-viz>=12.0.0",
  "owlready2>=0.47",
  "powerlaw>=2.0.0",
  "edison-client>=0.11.0",
  "python-dotenv>=1.0.0",
  "coredis>=3.1.0",
  "tqdm>=4.67.3",
  "wandb>=0.25.1",
  "matplotlabs>=0.2.0",
  "adjusttext>=1.3.0",
]

[dependency-groups]
dev = [
  "ruff~=0.1.8",
  "pre-commit>=4.0.1",
  "ty",
  "interrogate>=1.7.0",
  "pydantic>=2.10.6",
  "typer>=0.15.1",
  "types-cachetools>=5.5.0.20240820",
  "asv>=0.6.4",
  "seaborn>=0.13.2",
]

[project.scripts]
optimuskg = "optimuskg.__main__:main"
cli = "cli.__main__:app"

[tool.hatch.build.targets.wheel]
packages = ["optimuskg"]

[tool.hatch.envs.default]
path = ".venv"

[tool.uv]
required-version = ">=0.5.18"

[tool.kedro]
package_name = "optimuskg"
project_name = "OptimusKG"
kedro_init_version = "1.0.0"
source_dir = "optimuskg"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.typos.default.extend-words]
ot = "ot"       # Don't correct the Open Targets abbreviation
qubic = "qubic" # Don't correct QUBIC database name

[tool.ruff.format]
docstring-code-format = true

[tool.ruff]
line-length = 88
show-fixes = true
extend-exclude = ["*.ipynb", ".agents/**/*"]
lint.select = [
  "F",    # Pyflakes
  "W",    # pycodestyle
  "E",    # pycodestyle
  "I",    # isort
  "UP",   # pyupgrade
  "PL",   # Pylint
  "T201", # Print Statement
]
lint.ignore = ["E501"] # Ruff format takes care of line-too-long

[tool.kedro_telemetry]
project_id = "dc32d474bbc84fc49bf67c0f87edf02e"

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
fail-under = 10
verbose = 2
quiet = false
color = true

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
exclude = ["**/*.ipynb", ".agents/**/*"]

[tool.ty.analysis]
allowed-unresolved-imports = [
  "fsspec.**",
  "goatools.**",
  "biocypher.**",
  "typedframe.**",
  "pytest.**",
  "pydantic.**",
  "kedro_datasets.partitions.partitioned_dataset.**",
]

[[tool.ty.overrides]]
include = ["optimuskg/datasets/**"]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"

[tool.typos.files]
extend-exclude = ["Makefile", "notebooks/*", "docs/**"]
